# src/commands/resources/index.ts
@@ -3,8 +3,12 @@ import { transfers } from "./transfers.js";
 import { paymentMethods } from "./payment-methods.js";
 import { accounts } from "./accounts.js";
 import { capabilities } from "./capabilities.js";
+import { refunds } from "./refunds.js";
+import { webhooks } from "./webhooks.js";
+import { products } from "./products.js";
+import { invoices } from "./invoices.js";
 
-export const resources: ResourceDefinition[] = [transfers, paymentMethods, accounts, capabilities];
+export const resources: ResourceDefinition[] = [transfers, paymentMethods, accounts, capabilities, refunds, webhooks, products, invoices];
 
 export const deprecatedResources: DeprecatedResource[] = [
   {
